--- a/viewer/client/styles/layout.scss
+++ b/viewer/client/styles/layout.scss
@@ -36,3 +36,43 @@ $font-family-base: $font-family-default;
 .mono {
   font-family: $font-family-monospace;
 }
+
+.container-nav {
+  position: fixed;
+  display: block;
+  z-index: 10000;
+  right: 0;
+  left: 0;
+  top: -7px;
+  margin: 0;
+  padding: 5px 0;
+  border: 0;
+  background-color: white;
+  box-shadow: 0 2px 14px 0 rgba(0, 0, 0, .1),
+  0 2px 14px 0 rgba(0, 0, 0, .1);
+}
+
+.container-content {
+  margin-top: 5rem;
+  margin-bottom: 2rem;
+}
+
+.navbar-brand img {
+  height: 32px;
+}
+
+.center-parent {
+  position: absolute;
+  display: block;
+  left: 50%;
+  margin: 0;
+}
+
+.center-child {
+  transform: translate(-50%, 0);
+}
+
+.fill-parent {
+  min-height: 100%;
+  min-width: 100%;
+}
